Finally got it working in a shared folder.